--- a/Setup.ipynb
+++ b/Setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,6 +316,54 @@
     "    object_key = files[i]  # Assuming you want to generate a URL for the first file\n",
     "    url = generate_presigned_url(bucket_name, object_key)\n",
     "    print(f\"Pre-Signed URL{i}: {url}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Delete Bucket if needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keys: []\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'VZAT9GH7RFC6PCSC',\n",
+       "  'HostId': 'He9UGOpMc+wPozbJS5W8B9EUQW9vJu8jRePwu0j83gmaiWKwnHAeDn0glzKIw2Usups+mpKp4KDcvTJMH2Ny/M0YRaHWePoziblbQNDh/Q0=',\n",
+       "  'HTTPStatusCode': 204,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'He9UGOpMc+wPozbJS5W8B9EUQW9vJu8jRePwu0j83gmaiWKwnHAeDn0glzKIw2Usups+mpKp4KDcvTJMH2Ny/M0YRaHWePoziblbQNDh/Q0=',\n",
+       "   'x-amz-request-id': 'VZAT9GH7RFC6PCSC',\n",
+       "   'date': 'Fri, 24 May 2024 22:03:07 GMT',\n",
+       "   'server': 'AmazonS3'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Delete each file/object in the bucket\n",
+    "for obj in bucket.objects.all():\n",
+    "    obj.delete()\n",
+    "\n",
+    "print('Keys:', [obj.key for obj in bucket.objects.all()])\n",
+    "\n",
+    "# Delete the bucket itself\n",
+    "bucket.delete()"
    ]
   }
  ],
